--- a/.github/workflows/increment-version-on-merge.yml
+++ b/.github/workflows/increment-version-on-merge.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      # See https://github.com/im-open/git-version for more details around how to increment major/minor/patch through commit messages
+      # See https://github.com/im-open/git-version-lite for more details around how to increment major/minor/patch through commit messages
       - name: Increment the version
-        uses: im-open/git-version-lite@v1.0.0
+        uses: im-open/git-version-lite@v2.0.4
         with:
           create-ref: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
